Finished styling the pages, including search. Pretty much ready to roll now!

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "hiredis": "~0.1.15",
     "jade": "~0.35.0",
     "kue": "~0.6.2",
+    "lazy": "~1.0.11",
     "q": "~0.9.7",
     "redis": "~0.8.6",
     "reds": "~0.2.4",
